--- a/DockerfilePro
+++ b/DockerfilePro
@@ -2,6 +2,10 @@ FROM php:7.3-apache
 
 RUN mkdir -p /var/www/html/archs4
 
+RUN apt-get update 
+RUN apt-get install -y git
+RUN docker-php-ext-install pdo pdo_mysql mysqli
+
 # Bundle app source
 COPY ./archs4 /var/www/html/archs4
 
