--- a/DockerfilePro
+++ b/DockerfilePro
@@ -8,6 +8,7 @@ RUN docker-php-ext-install pdo pdo_mysql mysqli
 
 # Bundle app source
 COPY ./archs4 /var/www/html/archs4
+COPY ./archs4/apache2.conf /etc/apache
 
 RUN chmod 755 /var/www/html/archs4/fixdomain.sh
 
