--- a/archs4/.htaccess
+++ b/archs4/.htaccess
@@ -2,6 +2,8 @@
 
 RewriteEngine on
 
+SOMETHING IS WRONG
+
 RewriteRule ^gene/(.+)$ search/genepage.php?search=go&gene=$1
 RewriteRule ^series/(.+)$ search/seriespage.php?search=$1
 
