--- a/archs4/apache2.conf
+++ b/archs4/apache2.conf
@@ -169,7 +169,7 @@ Include ports.conf
 
 <Directory /var/www/>
         Options Indexes FollowSymLinks
-        AllowOverride All
+        AllowOverride None
         Require all granted
 </Directory>
 
