--- a/archs4/apache2.conf
+++ b/archs4/apache2.conf
@@ -169,7 +169,7 @@ Include ports.conf
 
 <Directory /var/www/>
         Options Indexes FollowSymLinks
-        AllowOverride None
+        AllowOverride All
         Require all granted
 </Directory>
 
@@ -178,9 +178,6 @@ Include ports.conf
 #       AllowOverride None
 #       Require all granted
 #</Directory>
-
-
-
 
 # AccessFileName: The name of the file to look for in each directory
 # for additional configuration directives.  See also the AllowOverride
